--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "~4.15.5",
     "lodash": "^4.17.4",
     "morgan": "~1.9.0",
+    "socket.io": "^2.0.4",
     "twitter": "^1.7.1"
   }
 }
